--- a/app/src/main/res/layout/err_alert.xml
+++ b/app/src/main/res/layout/err_alert.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_centerInParent="true"
+    android:layout_marginBottom="10dp"
     android:layout_height="match_parent">
 <LinearLayout
-    android:layout_margin="5dp"
     android:id="@android:id/inputArea"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:layout_marginBottom="15dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"></LinearLayout>
 </RelativeLayout>
